--- a/src/app/componentes/persona/modificar-persona/modificar-persona.component.html
+++ b/src/app/componentes/persona/modificar-persona/modificar-persona.component.html
@@ -37,7 +37,7 @@
             <div class="form-group">
               <label for="expediente" class="form-label text-start">Nº Expediente <span
                 class="obligatorios">*</span></label>
-              <input type="text" name="dni" id="expediente" class="form-control " placeholder="Nº Expediente"
+              <input type="text" name="expediente" id="expediente" class="form-control " placeholder="Nº Expediente"
                      formControlName="expediente" [readonly]="blockEditar">
             </div>
             <div *ngIf="controles.expediente.invalid && (controles.expediente.dirty || controles.expediente.touched)"
@@ -55,14 +55,14 @@
 
           <div class="col-4">
             <div class="form-group">
-              <label for="dni" class="form-label text-start">DNI <span class="obligatorios">*</span></label>
+              <label for="dni" class="form-label text-start">NIF o NIE<span class="obligatorios">*</span></label>
               <input type="text" name="dni" id="dni" class="form-control " placeholder="DNI" formControlName="dni"
                      [readonly]="blockEditar">
             </div>
             <div *ngIf="controles.dni.invalid && (controles.dni.dirty || controles.dni.touched)"
                  class="alert alert-secondary" role="alert">
-              <span *ngIf="controles.dni.errors.required">El DNI es obligatorio.</span>
-              <span *ngIf="controles.dni.errors.pattern">El DNI no es válido.</span>
+              <span *ngIf="controles.dni.errors.required">El NIF o NIE es obligatorio.</span>
+              <span *ngIf="controles.dni.errors.pattern">El NIF o NIE no es válido.</span>
             </div>
           </div>
 
