--- a/src/app/componentes/dispositivos-editar/dispositivos-editar.component.html
+++ b/src/app/componentes/dispositivos-editar/dispositivos-editar.component.html
@@ -18,7 +18,7 @@
       <!-- comienzo tipos de situacion -->
 
       <div class="row mb-3 form-group">
-        <label class="form-label text-start">Situaciones <span
+        <label class="form-label text-start">Situación del terminal <span
           class="obligatorios">*</span></label>
         <div class="col-12 col-lg pb-1 pb-lg-0">
           <ng-select id="situaciones" formControlName="situacion" [readonly]="blockEditar">
