--- a/src/app/componentes/alarma/lista-alarmas/lista-alarmas.component.html
+++ b/src/app/componentes/alarma/lista-alarmas/lista-alarmas.component.html
@@ -48,7 +48,7 @@
             <th class="ordenable" (click)="ordenacionTabla(2, 'observaciones')" scope="col">Observaciones <i class="fas fa-sort"></i></th>
             <th class="ordenable" (click)="ordenacionTabla(3, 'resumen')" scope="col">Resumen <i class="fas fa-sort"></i></th>
             <th class="ordenable" (click)="ordenacionTabla(4, 'id_tipo_alarma.nombre','id_tipo_alarma.id_clasificacion_alarma.nombre')" scope="col">Tipo alarma <i class="fas fa-sort"></i></th>
-            <th class="ordenable" (click)="ordenacionTabla(5, 'id_paciente_ucr.id_persona.nombre', 'id_paciente_ucr.id_persona.apellidos')" scope="col">Paciente UCR <i class="fas fa-sort"></i></th>
+            <th class="ordenable" (click)="ordenacionTabla(5, 'id_paciente_ucr.id_persona.nombre', 'id_paciente_ucr.id_persona.apellidos')" scope="col">Usuario del servicio <i class="fas fa-sort"></i></th>
             <th class="ordenable" (click)="ordenacionTabla(6, 'id_terminal.numero_terminal','','number')" scope="col">Número Terminal <i class="fas fa-sort"></i></th>
             <th class="ordenable" (click)="ordenacionTabla(7, 'id_teleoperador.first_name')" scope="col">Teleoperador <i class="fas fa-sort"></i></th>
             <th></th>
